# chess-bot

./: Cargo.toml  README.md
lib/: lib.rs
lib/game_runner/: local_game.rs  mod.rs
lib/gamelogic/: board.rs  mod.rs  pieces.rs
lib/runners/: chess_com.rs  local_game.rs  mod.rs
lib/stratagems/: cole_miner.rs  mod.rs  random_aggro.rs
src/: main.rs
tests/: board_setup_tests.rs  castling_logic.rs  fen_string_handling.rs  piece_move_logic.rs
