[package]
name = "chessbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "chessbot_lib"
path = "lib/lib.rs"

[[bin]]
name = "chessbot"
path = "src/main.rs"


[dependencies]
lazy_static = "1.4.0"
colored = "2.0.0"
rand = "0.8.5"
clap = { version = "4.0.29", features = ["derive"] }