[package]
name = "chessbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "chessbot_lib"
path = "lib/lib.rs"

[[bin]]
name = "chessbot"
path = "src/main.rs"


[dependencies]
lazy_static = "1.4.0"
colored = "2.0.0"
rand = "0.8.5"
clap = { version = "4.0.29", features = ["derive"] }
windows = { version = "0.43.0", features = ["Data_Xml_Dom", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Security", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_LibraryLoader"] }
screenshots = "0.4.5"