[package]
name = "chessbot"
version = "1.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "chessbot_lib"
path = "lib/lib.rs"

[[bin]]
name = "chessbot"
path = "src/main.rs"


[dependencies]
lazy_static = "1.4.0"
colored = "2.0.0"
rand = "0.8.5"
clap = { version = "4.0.29", features = ["derive"] }
thirtyfour_sync = "0.27.1"
serde_json = "1.0.91"
itertools = "0.10.5"